# scorecard-app

./: .coverage  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
scorecard_app/: cli.py
scorecard_app/models/: __init__.py  boxer.py  round.py  scorecard.py
tests/: conftest.py  test_boxer.py  test_cli.py  test_round.py  test_scorecard.py
