[tool.poetry]
name = "scorecard-app"
version = "0.1.0"
description = "A simple CLI to score boxing matches in real time."
authors = ["Chris Spann <cspanndev@gmail.com>"]
readme = "README.md"
packages = [{include = "scorecard_app"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.0.3"
click = "^8.1.6"
pandas = "^2.0.3"
tabulate = "^0.9.0"
pre-commit = "^3.3.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
ruff = "^0.0.280"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
omit = ["*/tests/*", "*/__init__.py"]

[tool.pytest.ini_options]
addopts = "-ra -q -v --cov=. --cov-report term-missing"
pythonpath = "scorecard_app"

[tool.ruff]
line-length=100

[tool.ruff.extend-per-file-ignores]
"__init__.py" = ["F401"]
